--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Garima Rana</h3>
-  <img src="img/bird.jpg" class="img-responsive img-square margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="img/me.jpg" class="img-responsive img-square margin" style="display:inline" alt="" width="350" height="300">
   <h3>I'm an adventurer</h3>
 </div>
 
