--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Garima Rana</h3>
   <img src="image/me.jpg" class="img-responsive img-square margin" style="display:inline" alt="" width="350" height="280">
-  <h3>I'm an adventurer</h3>
+  <h3>I'm computer science student.</h3>
 </div>
 
 <!-- Second Container -->
