--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Garima Rana</h3>
-  <img src="image/me.jpg" class="img-responsive img-square margin" style="display:inline" alt="" width="350" height="100">
+  <img src="image/me.jpg" class="img-responsive img-circle margin" style="display:inline" alt="" width="350" height="100">
   <h3>I'm computer science student.</h3>
 </div>
 
