--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 </div>
 
 <!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Where To Find Me?</h3><br>
+<div class="container-fluid bg-4 text-center">    
+  <h1 class="margin">Projects</h1><br>
   <div class="row">
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -105,6 +105,11 @@
     <div class="col-sm-4"> 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <img src="image/agreegator.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="row">
+    <div class="col-sm-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <img src="image/reddit.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
