--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Garima Rana</h3>
+  <h1 class="margin">Garima Rana</h1>
   <img src="image/me.jpg" class="img-thumbnail" style="display:inline" alt="" width="200" height="250">
   <h3>I'm computer science student.</h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What I Am</h3>
+  <h1 class="margin">About</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
@@ -109,7 +109,7 @@
     <div class="row">
     <div class="col-sm-4">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="image/reddit.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="image/map.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
