--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     color: #ffffff;
   }
   .bg-2 { 
-    background-color: #474e5d; /* Dark Blue */
+    background-color: #ffffff; /* Dark blue */
     color: #ffffff;
   }
   .bg-3 { 
