--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     color: #ffffff;
   }
   .bg-2 { 
-    background-color: #ffffff; /* Dark blue */
-    color: #ffffff;
+    background-color: #1abc9c; /* Dark blue */
+    color: #1abc9c;
   }
   .bg-3 { 
     background-color: #ffffff; /* White */
