--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   }
   .bg-2 { 
     background-color: #1abc9c; /* Dark blue */
-    color: #1abc9c;
+    color: #ffffff;
   }
   .bg-3 { 
     background-color: #ffffff; /* White */
