--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     color: #ffffff;
   }
   .bg-2 { 
-    background-color: #1abc9c; /* Dark blue */
+    background-color: #6a5acd; /* Dark blue */
     color: #ffffff;
   }
   .bg-3 { 
