--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <h1 class="margin">Projects</h1><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Reddit bot</p>
+      <h1>Reddit bot</h1>
       <img src="image/reddit.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
