--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <img src="image/reddit.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h1>Instabot</h1>
       <img src="image/instagram.jpg" class="img-responsive margin" style="width:100%" "height=auto"alt="Image">
     </div>
     <div class="col-sm-4"> 
