--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
       <img src="image/instagram.jpg" class="img-responsive margin" style="width:100%" "height=auto"alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h1>Agreegator</h1>
       <img src="image/agreegator.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="row">
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h1>Map</h1>
       <img src="image/map.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
