--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h1 class="margin">About</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+  <p>I am persuing my b-tech in computer science. I am interested in the area of web development.</p>
   
 </div>
 
