--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
-  <h1 class="margin">Garima Rana</h1>
+  <h1 class="margin"><b><i>Garima Rana</i></b></h1>
   <img src="image/me.jpg" class="img-thumbnail" style="display:inline" alt="" width="200" height="250">
   <h3>I'm computer science student.</h3>
 </div>
